tests/lean/coercion1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Assumed: T
  Assumed: R
  Assumed: f
  Coercion f
variable f : T → R
coercion f
  Assumed: g
coercion1.lean:8:0 error: invalid coercion declaration, frontend already has a coercion for the given types
  Assumed: h
coercion1.lean:10:0 error: invalid coercion declaration, a coercion must have an arrow type (i.e., a non-dependent functional type)
  Defined: T2
  Defined: R2
  Assumed: f2
coercion1.lean:14:0 error: invalid coercion declaration, frontend already has a coercion for the given types
  Assumed: id
coercion1.lean:16:0 error: invalid coercion declaration, 'from' and 'to' types are the same
